<resources>
    <string name="app_name">ShoppingList</string>
    <string name="show_button">SHOW</string>
    <string name="add_button">ADD</string>
    <string name="delete_button">DELETE</string>
    <string name="back_button">BACK</string>
    <string name="title">Shopping List</string>
    <string name="productLabel">product name:</string>
    <string name="quantityLabel">quantity:</string>
    <string name="priceLabel">price:</string>
    <string name="title_activity_login">Sign in</string>
    <string name="sign_up_activity_login">Sign up</string>
    <string name="sign_up_text_activity_login">If you don\'t account
        You can sign up now!</string>
    <string name="sign_in_activity_login">Sign in</string>
    <string name="name_activity_login">name: </string>
    <string name="password_activity_login">password: </string>
    <string name="empty_text">""</string>
    <string name="title_activity_settings">Settings</string>
    <string name="confirmButton">Apply</string>
    <string name="ipAddress">Host IP address: </string>
    <string name="btnSettings">Settings</string>
    <string name="emailLabel">Email: </string>
    <string name="passwordLabel">Password: </string>
    <string name="nameLabel">Name: </string>
    <string name="buttonWtb">WANT TO BUY</string>
    <string name="buttonBought">BOUGHT</string>


</resources>
